<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".Activities.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/erroTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/erroDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/erroDescription"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnVoltarErro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnVoltar"
        android:layout_marginTop="50dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"/>

</LinearLayout>